components/networkpolicies/namespace-templates/kube-system/allow-ingress-from-all-to-kube-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-all-to-kube-api
  namespace: kube-system
spec:
  podSelector: {}  # we don't use pod selector because at GKE we don't have a pods here
  ingress:
    - ports:
        - protocol: TCP
          port: 6443
        - protocol: TCP
          port: 443
      from:
        - ipBlock:
            cidr: ${PRIVATE_IP_CIDR:=10.0.0.0/8}
        - namespaceSelector: {}
  policyTypes:
    - Ingress
