components/networkpolicies/namespace-templates/kube-system/allow-ingress-from-all-to-kube-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-all-to-kube-dns
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
  policyTypes:
    - Ingress
